[gd_scene load_steps=14 format=4 uid="uid://da2bbgrogslum"]

[ext_resource type="Texture2D" uid="uid://c2dvhcw4hsca4" path="res://Art/32x32 tileset/32x32 first tileset.png" id="1_7g31s"]
[ext_resource type="Script" path="res://Rooms/RoomScript/Room3.gd" id="1_dxisv"]
[ext_resource type="PackedScene" uid="uid://1ttwrf1dam2v" path="res://Scene/KeyChest.tscn" id="4_8aiku"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oxkms"]
texture = ExtResource("1_7g31s")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0

[sub_resource type="TileSet" id="TileSet_m2css"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_oxkms")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ey1h0"]
load_path = "res://.godot/imported/32x32 first tileset.png-79e6f3b88c0bd1cc46ebd6cf6d0ef412.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ocon0"]
texture = SubResource("CompressedTexture2D_ey1h0")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0

[sub_resource type="TileSet" id="TileSet_1iqrk"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_ocon0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_selij"]
texture = SubResource("CompressedTexture2D_ey1h0")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0

[sub_resource type="TileSet" id="TileSet_a2t13"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_selij")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jvk7"]
size = Vector2(128, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8iju"]
size = Vector2(20, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5oc5"]
size = Vector2(128, 20)

[node name="Room3" type="Node2D"]
script = ExtResource("1_dxisv")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_m2css")
format = 2

[node name="Ground" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAIAAAAAAAEAAAADAAIAAAAAAAIAAAADAAIAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAAAAAUAAAADAAIAAAAAAAYAAAADAAIAAAAAAAcAAAADAAIAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAIAAAAAAAsAAAADAAIAAAAAAAwAAAADAAIAAAAAAA0AAAADAAIAAAAAAA4AAAAIAAMAAAAAAA8AAAAIAAUAAAAAABAAAAAIAAUAAAAAABEAAAAIAAUAAAAAABIAAAALAAYAAAAAABMAAAADAAIAAAAAABQAAAADAAIAAAABAAAAAAADAAIAAAABAAEAAAADAAIAAAABAAIAAAADAAIAAAABAAMAAAADAAIAAAABAAQAAAADAAIAAAABAAUAAAADAAIAAAABAAYAAAADAAIAAAABAAcAAAADAAIAAAABAAgAAAADAAIAAAABAAkAAAADAAIAAAABAAoAAAADAAIAAAABAAsAAAADAAIAAAABAAwAAAADAAIAAAABAA0AAAADAAIAAAABAA4AAAAIAAMAAAABAA8AAAAIAAUAAAABABAAAAAIAAUAAAABABEAAAAIAAUAAAABABIAAAALAAYAAAABABMAAAADAAIAAAABABQAAAADAAIAAAACAAAAAAADAAIAAAACAAEAAAADAAIAAAACAAIAAAADAAIAAAACAAMAAAADAAIAAAACAAQAAAADAAIAAAACAAUAAAADAAIAAAACAAYAAAADAAIAAAACAAcAAAADAAIAAAACAAgAAAADAAIAAAACAAkAAAADAAIAAAACAAoAAAADAAIAAAACAAsAAAADAAIAAAACAAwAAAADAAIAAAACAA0AAAADAAIAAAACAA4AAAAIAAMAAAACAA8AAAAIAAUAAAACABAAAAAIAAUAAAACABEAAAAIAAUAAAACABIAAAALAAYAAAACABMAAAADAAIAAAACABQAAAADAAIAAAADAAAAAAADAAIAAAADAAEAAAADAAIAAAADAAIAAAADAAIAAAADAAMAAAADAAIAAAADAAQAAAADAAIAAAADAAUAAAADAAIAAAADAAYAAAADAAIAAAADAAcAAAADAAIAAAADAAgAAAADAAIAAAADAAkAAAADAAIAAAADAAoAAAADAAIAAAADAAsAAAADAAIAAAADAAwAAAADAAIAAAADAA0AAAADAAIAAAADAA4AAAAIAAMAAAADAA8AAAAIAAUAAAADABAAAAAIAAUAAAADABEAAAAIAAUAAAADABIAAAALAAYAAAADABMAAAADAAIAAAADABQAAAADAAIAAAAEAAAAAAADAAIAAAAEAAEAAAADAAIAAAAEAAIAAAADAAIAAAAEAAMAAAADAAIAAAAEAAQAAAADAAIAAAAEAAUAAAADAAIAAAAEAAYAAAAKAAQAAAAEAAcAAAAKAAUAAAAEAAgAAAAKAAUAAAAEAAkAAAAKAAUAAAAEAAoAAAAKAAUAAAAEAAsAAAAKAAUAAAAEAAwAAAAKAAUAAAAEAA0AAAAKAAUAAAAEAA4AAAAJAAMAAAAEAA8AAAAIAAUAAAAEABAAAAAIAAUAAAAEABEAAAAIAAUAAAAEABIAAAALAAYAAAAEABMAAAADAAIAAAAEABQAAAADAAIAAAAFAAAAAAADAAIAAAAFAAEAAAADAAIAAAAFAAIAAAADAAIAAAAFAAMAAAADAAIAAAAFAAQAAAADAAIAAAAFAAUAAAADAAIAAAAFAAYAAAALAAQAAAAFAAcAAAAIAAUAAAAFAAgAAAAIAAUAAAAFAAkAAAAIAAUAAAAFAAoAAAAIAAUAAAAFAAsAAAAIAAUAAAAFAAwAAAAIAAUAAAAFAA0AAAAIAAUAAAAFAA4AAAAIAAUAAAAFAA8AAAAIAAUAAAAFABAAAAAIAAUAAAAFABEAAAAIAAUAAAAFABIAAAALAAYAAAAFABMAAAADAAIAAAAFABQAAAADAAIAAAAGAAAAAAADAAIAAAAGAAEAAAADAAIAAAAGAAIAAAADAAIAAAAGAAMAAAADAAIAAAAGAAQAAAADAAIAAAAGAAUAAAADAAIAAAAGAAYAAAALAAQAAAAGAAcAAAAIAAUAAAAGAAgAAAAIAAUAAAAGAAkAAAAIAAUAAAAGAAoAAAAIAAUAAAAGAAsAAAAIAAUAAAAGAAwAAAAIAAUAAAAGAA0AAAAIAAUAAAAGAA4AAAAIAAUAAAAGAA8AAAAIAAUAAAAGABAAAAAIAAUAAAAGABEAAAAIAAUAAAAGABIAAAALAAYAAAAGABMAAAADAAIAAAAGABQAAAADAAIAAAAHAAAAAAADAAIAAAAHAAEAAAADAAIAAAAHAAIAAAADAAIAAAAHAAMAAAADAAIAAAAHAAQAAAADAAIAAAAHAAUAAAADAAIAAAAHAAYAAAALAAQAAAAHAAcAAAAIAAUAAAAHAAgAAAAIAAUAAAAHAAkAAAAIAAUAAAAHAAoAAAAIAAUAAAAHAAsAAAAIAAUAAAAHAAwAAAAIAAUAAAAHAA0AAAAIAAUAAAAHAA4AAAAIAAUAAAAHAA8AAAAIAAUAAAAHABAAAAAIAAUAAAAHABEAAAAIAAUAAAAHABIAAAALAAYAAAAHABMAAAADAAIAAAAHABQAAAADAAIAAAAIAAAAAAADAAIAAAAIAAEAAAADAAIAAAAIAAIAAAADAAIAAAAIAAMAAAADAAIAAAAIAAQAAAADAAIAAAAIAAUAAAADAAIAAAAIAAYAAAALAAQAAAAIAAcAAAAIAAUAAAAIAAgAAAAIAAUAAAAIAAkAAAAIAAUAAAAIAAoAAAAHAAEAAAAIAAsAAAAMAAUAAAAIAAwAAAAMAAUAAAAIAA0AAAAMAAUAAAAIAA4AAAAMAAUAAAAIAA8AAAAMAAUAAAAIABAAAAAMAAUAAAAIABEAAAAMAAUAAAAIABIAAAAMAAYAAAAIABMAAAADAAIAAAAIABQAAAADAAIAAAAJAAAAAAADAAIAAAAJAAEAAAADAAIAAAAJAAIAAAADAAIAAAAJAAMAAAADAAIAAAAJAAQAAAADAAIAAAAJAAUAAAADAAIAAAAJAAYAAAALAAQAAAAJAAcAAAAIAAUAAAAJAAgAAAAIAAUAAAAJAAkAAAAIAAUAAAAJAAoAAAALAAYAAAAJAAsAAAADAAIAAAAJAAwAAAADAAIAAAAJAA0AAAADAAIAAAAJAA4AAAADAAIAAAAJAA8AAAADAAIAAAAJABAAAAADAAIAAAAJABEAAAADAAIAAAAJABIAAAADAAIAAAAJABMAAAADAAIAAAAJABQAAAADAAIAAAAKAAAAAAADAAIAAAAKAAEAAAADAAIAAAAKAAIAAAADAAIAAAAKAAMAAAADAAIAAAAKAAQAAAADAAIAAAAKAAUAAAADAAIAAAAKAAYAAAALAAQAAAAKAAcAAAAIAAUAAAAKAAgAAAAIAAUAAAAKAAkAAAAIAAUAAAAKAAoAAAALAAYAAAAKAAsAAAADAAIAAAAKAAwAAAADAAIAAAAKAA0AAAADAAIAAAAKAA4AAAADAAIAAAAKAA8AAAADAAIAAAAKABAAAAADAAIAAAAKABEAAAADAAIAAAAKABIAAAADAAIAAAAKABMAAAADAAIAAAAKABQAAAADAAIAAAALAAAAAAADAAIAAAALAAEAAAADAAIAAAALAAIAAAADAAIAAAALAAMAAAADAAIAAAALAAQAAAADAAIAAAALAAUAAAADAAIAAAALAAYAAAALAAQAAAALAAcAAAAIAAUAAAALAAgAAAAIAAUAAAALAAkAAAAIAAUAAAALAAoAAAALAAYAAAALAAsAAAADAAIAAAALAAwAAAADAAIAAAALAA0AAAADAAIAAAALAA4AAAADAAIAAAALAA8AAAADAAIAAAALABAAAAADAAIAAAALABEAAAADAAIAAAALABIAAAADAAIAAAALABMAAAADAAIAAAALABQAAAADAAIAAAAMAAAAAAADAAIAAAAMAAEAAAADAAIAAAAMAAIAAAADAAIAAAAMAAMAAAADAAIAAAAMAAQAAAADAAIAAAAMAAUAAAADAAIAAAAMAAYAAAALAAQAAAAMAAcAAAAIAAUAAAAMAAgAAAAIAAUAAAAMAAkAAAAIAAUAAAAMAAoAAAALAAYAAAAMAAsAAAADAAIAAAAMAAwAAAADAAIAAAAMAA0AAAADAAIAAAAMAA4AAAADAAIAAAAMAA8AAAADAAIAAAAMABAAAAADAAIAAAAMABEAAAADAAIAAAAMABIAAAADAAIAAAAMABMAAAADAAIAAAAMABQAAAADAAIAAAANAAAAAAADAAIAAAANAAEAAAADAAIAAAANAAIAAAADAAIAAAANAAMAAAADAAIAAAANAAQAAAADAAIAAAANAAUAAAADAAIAAAANAAYAAAALAAQAAAANAAcAAAAIAAUAAAANAAgAAAAIAAUAAAANAAkAAAAIAAUAAAANAAoAAAALAAYAAAANAAsAAAADAAIAAAANAAwAAAADAAIAAAANAA0AAAADAAIAAAANAA4AAAADAAIAAAANAA8AAAADAAIAAAANABAAAAADAAIAAAANABEAAAADAAIAAAANABIAAAADAAIAAAANABMAAAADAAIAAAANABQAAAADAAIAAAAOAAAAAAADAAIAAAAOAAEAAAADAAIAAAAOAAIAAAADAAIAAAAOAAMAAAADAAIAAAAOAAQAAAADAAIAAAAOAAUAAAADAAIAAAAOAAYAAAALAAQAAAAOAAcAAAAIAAUAAAAOAAgAAAAIAAUAAAAOAAkAAAAIAAUAAAAOAAoAAAALAAYAAAAOAAsAAAADAAIAAAAOAAwAAAADAAIAAAAOAA0AAAADAAIAAAAOAA4AAAADAAIAAAAOAA8AAAADAAIAAAAOABAAAAADAAIAAAAOABEAAAADAAIAAAAOABIAAAADAAIAAAAOABMAAAADAAIAAAAOABQAAAADAAIAAAAPAAAAAAADAAIAAAAPAAEAAAADAAIAAAAPAAIAAAADAAIAAAAPAAMAAAADAAIAAAAPAAQAAAADAAIAAAAPAAUAAAADAAIAAAAPAAYAAAALAAQAAAAPAAcAAAAIAAUAAAAPAAgAAAAIAAUAAAAPAAkAAAAIAAUAAAAPAAoAAAALAAYAAAAPAAsAAAADAAIAAAAPAAwAAAADAAIAAAAPAA0AAAADAAIAAAAPAA4AAAADAAIAAAAPAA8AAAADAAIAAAAPABAAAAADAAIAAAAPABEAAAADAAIAAAAPABIAAAADAAIAAAAPABMAAAADAAIAAAAPABQAAAADAAIAAAAQAAAAAAADAAIAAAAQAAEAAAADAAIAAAAQAAIAAAADAAIAAAAQAAMAAAADAAIAAAAQAAQAAAADAAIAAAAQAAUAAAADAAIAAAAQAAYAAAALAAQAAAAQAAcAAAAIAAUAAAAQAAgAAAAIAAUAAAAQAAkAAAAIAAUAAAAQAAoAAAALAAYAAAAQAAsAAAADAAIAAAAQAAwAAAADAAIAAAAQAA0AAAADAAIAAAAQAA4AAAADAAIAAAAQAA8AAAADAAIAAAAQABAAAAADAAIAAAAQABEAAAADAAIAAAAQABIAAAADAAIAAAAQABMAAAADAAIAAAAQABQAAAADAAIAAAARAAAAAAADAAIAAAARAAEAAAADAAIAAAARAAIAAAADAAIAAAARAAMAAAADAAIAAAARAAQAAAADAAIAAAARAAUAAAADAAIAAAARAAYAAAALAAQAAAARAAcAAAAIAAUAAAARAAgAAAAIAAUAAAARAAkAAAAIAAUAAAARAAoAAAALAAYAAAARAAsAAAADAAIAAAARAAwAAAADAAIAAAARAA0AAAADAAIAAAARAA4AAAADAAIAAAARAA8AAAADAAIAAAARABAAAAADAAIAAAARABEAAAADAAIAAAARABIAAAADAAIAAAARABMAAAADAAIAAAARABQAAAADAAIAAAASAAAAAAADAAIAAAASAAEAAAADAAIAAAASAAIAAAADAAIAAAASAAMAAAADAAIAAAASAAQAAAADAAIAAAASAAUAAAADAAIAAAASAAYAAAALAAQAAAASAAcAAAAIAAUAAAASAAgAAAAIAAUAAAASAAkAAAAIAAUAAAASAAoAAAALAAYAAAASAAsAAAADAAIAAAASAAwAAAADAAIAAAASAA0AAAADAAIAAAASAA4AAAADAAIAAAASAA8AAAADAAIAAAASABAAAAADAAIAAAASABEAAAADAAIAAAASABIAAAADAAIAAAASABMAAAADAAIAAAASABQAAAADAAIAAAATAAAAAAADAAIAAAATAAEAAAADAAIAAAATAAIAAAADAAIAAAATAAMAAAADAAIAAAATAAQAAAADAAIAAAATAAUAAAADAAIAAAATAAYAAAALAAQAAAATAAcAAAAIAAUAAAATAAgAAAAIAAUAAAATAAkAAAAIAAUAAAATAAoAAAALAAYAAAATAAsAAAADAAIAAAATAAwAAAADAAIAAAATAA0AAAADAAIAAAATAA4AAAADAAIAAAATAA8AAAADAAIAAAATABAAAAADAAIAAAATABEAAAADAAIAAAATABIAAAADAAIAAAATABMAAAADAAIAAAATABQAAAADAAIAAAAUAAAAAAAKAAUAAAAUAAEAAAAKAAUAAAAUAAIAAAAKAAUAAAAUAAMAAAAKAAUAAAAUAAQAAAAKAAUAAAAUAAUAAAAKAAUAAAAUAAYAAAAJAAMAAAAUAAcAAAAIAAUAAAAUAAgAAAAIAAUAAAAUAAkAAAAIAAUAAAAUAAoAAAAJAAEAAAAUAAsAAAAKAAUAAAAUAAwAAAAKAAUAAAAUAA0AAAAKAAUAAAAUAA4AAAAKAAUAAAAUAA8AAAAKAAUAAAAUABAAAAAKAAUAAAAUABEAAAAKAAUAAAAUABIAAAAKAAUAAAAUABMAAAAKAAUAAAAUABQAAAAKAAUAAAAVAAAAAAAIAAUAAAAVAAEAAAAIAAUAAAAVAAIAAAAIAAUAAAAVAAMAAAAIAAUAAAAVAAQAAAAIAAUAAAAVAAUAAAAIAAUAAAAVAAYAAAAIAAUAAAAVAAcAAAAIAAUAAAAVAAgAAAAIAAUAAAAVAAkAAAAIAAUAAAAVAAoAAAAIAAUAAAAVAAsAAAAIAAUAAAAVAAwAAAAIAAUAAAAVAA0AAAAIAAUAAAAVAA4AAAAIAAUAAAAVAA8AAAAIAAUAAAAVABAAAAAIAAUAAAAVABEAAAAIAAUAAAAVABIAAAAIAAUAAAAVABMAAAAIAAUAAAAVABQAAAAIAAUAAAAWAAAAAAAIAAUAAAAWAAEAAAAIAAUAAAAWAAIAAAAIAAUAAAAWAAMAAAAIAAUAAAAWAAQAAAAIAAUAAAAWAAUAAAAIAAUAAAAWAAYAAAAIAAUAAAAWAAcAAAAIAAUAAAAWAAgAAAAIAAUAAAAWAAkAAAAIAAUAAAAWAAoAAAAIAAUAAAAWAAsAAAAIAAUAAAAWAAwAAAAIAAUAAAAWAA0AAAAIAAUAAAAWAA4AAAAIAAUAAAAWAA8AAAAIAAUAAAAWABAAAAAIAAUAAAAWABEAAAAIAAUAAAAWABIAAAAIAAUAAAAWABMAAAAIAAUAAAAWABQAAAAIAAUAAAAXAAAAAAAIAAUAAAAXAAEAAAAIAAUAAAAXAAIAAAAIAAUAAAAXAAMAAAAIAAUAAAAXAAQAAAAIAAUAAAAXAAUAAAAIAAUAAAAXAAYAAAAIAAUAAAAXAAcAAAAIAAUAAAAXAAgAAAAIAAUAAAAXAAkAAAAIAAUAAAAXAAoAAAAIAAUAAAAXAAsAAAAIAAUAAAAXAAwAAAAIAAUAAAAXAA0AAAAIAAUAAAAXAA4AAAAIAAUAAAAXAA8AAAAIAAUAAAAXABAAAAAIAAUAAAAXABEAAAAIAAUAAAAXABIAAAAIAAUAAAAXABMAAAAIAAUAAAAXABQAAAAIAAUAAAAYAAAAAAAMAAUAAAAYAAEAAAAMAAUAAAAYAAIAAAAMAAUAAAAYAAMAAAAMAAUAAAAYAAQAAAAMAAUAAAAYAAUAAAAMAAUAAAAYAAYAAAAMAAUAAAAYAAcAAAAMAAUAAAAYAAgAAAAMAAUAAAAYAAkAAAAMAAUAAAAYAAoAAAAMAAUAAAAYAAsAAAAMAAUAAAAYAAwAAAAMAAUAAAAYAA0AAAAMAAUAAAAYAA4AAAAMAAUAAAAYAA8AAAAMAAUAAAAYABAAAAAMAAUAAAAYABEAAAAMAAUAAAAYABIAAAAMAAUAAAAYABMAAAAMAAUAAAAYABQAAAAMAAUAAAAZAAAAAAADAAIAAAAZAAEAAAADAAIAAAAZAAIAAAADAAIAAAAZAAMAAAADAAIAAAAZAAQAAAADAAIAAAAZAAUAAAADAAIAAAAZAAYAAAADAAIAAAAZAAcAAAADAAIAAAAZAAgAAAADAAIAAAAZAAkAAAADAAIAAAAZAAoAAAADAAIAAAAZAAsAAAADAAIAAAAZAAwAAAADAAIAAAAZAA0AAAADAAIAAAAZAA4AAAADAAIAAAAZAA8AAAADAAIAAAAZABAAAAADAAIAAAAZABEAAAADAAIAAAAZABIAAAADAAIAAAAZABMAAAADAAIAAAAZABQAAAADAAIAAAAaAAAAAAADAAIAAAAaAAEAAAADAAIAAAAaAAIAAAADAAIAAAAaAAMAAAADAAIAAAAaAAQAAAADAAIAAAAaAAUAAAADAAIAAAAaAAYAAAADAAIAAAAaAAcAAAADAAIAAAAaAAgAAAADAAIAAAAaAAkAAAADAAIAAAAaAAoAAAADAAIAAAAaAAsAAAADAAIAAAAaAAwAAAADAAIAAAAaAA0AAAADAAIAAAAaAA4AAAADAAIAAAAaAA8AAAADAAIAAAAaABAAAAADAAIAAAAaABEAAAADAAIAAAAaABIAAAADAAIAAAAaABMAAAADAAIAAAAaABQAAAADAAIAAAAbAAAAAAADAAIAAAAbAAEAAAADAAIAAAAbAAIAAAADAAIAAAAbAAMAAAADAAIAAAAbAAQAAAADAAIAAAAbAAUAAAADAAIAAAAbAAYAAAADAAIAAAAbAAcAAAADAAIAAAAbAAgAAAADAAIAAAAbAAkAAAADAAIAAAAbAAoAAAADAAIAAAAbAAsAAAADAAIAAAAbAAwAAAADAAIAAAAbAA0AAAADAAIAAAAbAA4AAAADAAIAAAAbAA8AAAADAAIAAAAbABAAAAADAAIAAAAbABEAAAADAAIAAAAbABIAAAADAAIAAAAbABMAAAADAAIAAAAbABQAAAADAAIAAAAcAAAAAAADAAIAAAAcAAEAAAADAAIAAAAcAAIAAAADAAIAAAAcAAMAAAADAAIAAAAcAAQAAAADAAIAAAAcAAUAAAADAAIAAAAcAAYAAAADAAIAAAAcAAcAAAADAAIAAAAcAAgAAAADAAIAAAAcAAkAAAADAAIAAAAcAAoAAAADAAIAAAAcAAsAAAADAAIAAAAcAAwAAAADAAIAAAAcAA0AAAADAAIAAAAcAA4AAAADAAIAAAAcAA8AAAADAAIAAAAcABAAAAADAAIAAAAcABEAAAADAAIAAAAcABIAAAADAAIAAAAcABMAAAADAAIAAAAcABQAAAADAAIAAAAdAAAAAAADAAIAAAAdAAEAAAADAAIAAAAdAAIAAAADAAIAAAAdAAMAAAADAAIAAAAdAAQAAAADAAIAAAAdAAUAAAADAAIAAAAdAAYAAAADAAIAAAAdAAcAAAADAAIAAAAdAAgAAAADAAIAAAAdAAkAAAADAAIAAAAdAAoAAAADAAIAAAAdAAsAAAADAAIAAAAdAAwAAAADAAIAAAAdAA0AAAADAAIAAAAdAA4AAAADAAIAAAAdAA8AAAADAAIAAAAdABAAAAADAAIAAAAdABEAAAADAAIAAAAdABIAAAADAAIAAAAdABMAAAADAAIAAAAdABQAAAADAAIAAAAeAAAAAAADAAIAAAAeAAEAAAADAAIAAAAeAAIAAAADAAIAAAAeAAMAAAADAAIAAAAeAAQAAAADAAIAAAAeAAUAAAADAAIAAAAeAAYAAAADAAIAAAAeAAcAAAADAAIAAAAeAAgAAAADAAIAAAAeAAkAAAADAAIAAAAeAAoAAAADAAIAAAAeAAsAAAADAAIAAAAeAAwAAAADAAIAAAAeAA0AAAADAAIAAAAeAA4AAAADAAIAAAAeAA8AAAADAAIAAAAeABAAAAADAAIAAAAeABEAAAADAAIAAAAeABIAAAADAAIAAAAeABMAAAADAAIAAAAeABQAAAADAAIAAAAfAAAAAAADAAIAAAAfAAEAAAADAAIAAAAfAAIAAAADAAIAAAAfAAMAAAADAAIAAAAfAAQAAAADAAIAAAAfAAUAAAADAAIAAAAfAAYAAAADAAIAAAAfAAcAAAADAAIAAAAfAAgAAAADAAIAAAAfAAkAAAADAAIAAAAfAAoAAAADAAIAAAAfAAsAAAADAAIAAAAfAAwAAAADAAIAAAAfAA0AAAADAAIAAAAfAA4AAAADAAIAAAAfAA8AAAADAAIAAAAfABAAAAADAAIAAAAfABEAAAADAAIAAAAfABIAAAADAAIAAAAfABMAAAADAAIAAAAfABQAAAADAAIAAAAgAAAAAAADAAIAAAAgAAEAAAADAAIAAAAgAAIAAAADAAIAAAAgAAMAAAADAAIAAAAgAAQAAAADAAIAAAAgAAUAAAADAAIAAAAgAAYAAAADAAIAAAAgAAcAAAADAAIAAAAgAAgAAAADAAIAAAAgAAkAAAADAAIAAAAgAAoAAAADAAIAAAAgAAsAAAADAAIAAAAgAAwAAAADAAIAAAAgAA0AAAADAAIAAAAgAA4AAAADAAIAAAAgAA8AAAADAAIAAAAgABAAAAADAAIAAAAgABEAAAADAAIAAAAgABIAAAADAAIAAAAgABMAAAADAAIAAAAgABQAAAADAAIAAAAhAAAAAAADAAIAAAAhAAEAAAADAAIAAAAhAAIAAAADAAIAAAAhAAMAAAADAAIAAAAhAAQAAAADAAIAAAAhAAUAAAADAAIAAAAhAAYAAAADAAIAAAAhAAcAAAADAAIAAAAhAAgAAAADAAIAAAAhAAkAAAADAAIAAAAhAAoAAAADAAIAAAAhAAsAAAADAAIAAAAhAAwAAAADAAIAAAAhAA0AAAADAAIAAAAhAA4AAAADAAIAAAAhAA8AAAADAAIAAAAhABAAAAADAAIAAAAhABEAAAADAAIAAAAhABIAAAADAAIAAAAhABMAAAADAAIAAAAhABQAAAADAAIAAAAiAAAAAAADAAIAAAAiAAEAAAADAAIAAAAiAAIAAAADAAIAAAAiAAMAAAADAAIAAAAiAAQAAAADAAIAAAAiAAUAAAADAAIAAAAiAAYAAAADAAIAAAAiAAcAAAADAAIAAAAiAAgAAAADAAIAAAAiAAkAAAADAAIAAAAiAAoAAAADAAIAAAAiAAsAAAADAAIAAAAiAAwAAAADAAIAAAAiAA0AAAADAAIAAAAiAA4AAAADAAIAAAAiAA8AAAADAAIAAAAiABAAAAADAAIAAAAiABEAAAADAAIAAAAiABIAAAADAAIAAAAiABMAAAADAAIAAAAiABQAAAADAAIAAAAjAAAAAAADAAIAAAAjAAEAAAADAAIAAAAjAAIAAAADAAIAAAAjAAMAAAADAAIAAAAjAAQAAAADAAIAAAAjAAUAAAADAAIAAAAjAAYAAAADAAIAAAAjAAcAAAADAAIAAAAjAAgAAAADAAIAAAAjAAkAAAADAAIAAAAjAAoAAAADAAIAAAAjAAsAAAADAAIAAAAjAAwAAAADAAIAAAAjAA0AAAADAAIAAAAjAA4AAAADAAIAAAAjAA8AAAADAAIAAAAjABAAAAADAAIAAAAjABEAAAADAAIAAAAjABIAAAADAAIAAAAjABMAAAADAAIAAAAjABQAAAADAAIAAAA=")
tile_set = SubResource("TileSet_1iqrk")

[node name="Plants" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAABAA8AAAALAAUAAAADABEAAAALAAUAAAAHAA8AAAALAAUAAAAHABAAAAALAAUAABAFAAcAAAALAAUAAAAMAAkAAAAbAAYAAAASAAcAAAALAAUAAAAVABMAAAALAAUAAAAXABAAAAALAAUAAAAWAAsAAAALAAUAAAAXAAUAAAALAAUAAAAVAAEAAAALAAUAAAACAAEAAAAIAAIAAAACAAkAAAAIAAIAAAAJAAQAAAAIAAIAAAARAAIAAAAIAAIAAAASABAAAAAIAAIAAAALABMAAAAIAAIAAAACABQAAAAcAAUAAAAbABIAAAAIAAIAAAAhABAAAAAIAAIAAAAdAAwAAAAIAAIAAAAiAAgAAAAIAAIAAAAaAAUAAAAIAAIAAAAfAAEAAAAIAAIAAAAMAAwAAAAIAAIAABABAAUAAAAIAAIAABALAAEAAAAbAAQAAAAFABMAAAAIAAIAABAaAAgAAAAIAAIAABAgABMAAAAIAAIAABAiAAIAAAAIAAIAABAOAA8AAAAdAAgAAAAGAAIAAAALAAIAAAABAAwAAAALAAIAAAAQAAQAAAALAAIAAAAHABQAAAALAAIAAAASAAwAAAALAAIAAAAaABAAAAALAAIAAAAhAAsAAAALAAIAAAAeAAUAAAALAAIAAAAaAAIAAAALAAIAAAATAAUAAAALAAIAAAARAAsAAAAcAAMAAAAPAA0AAAAaAAUAAAAPAAsAAAAaAAMAAAAQAAwAAAAbAAQAAAAPAAwAAAAaAAQAAAAQAAsAAAAbAAMAAAARAA0AAAAcAAUAAAAQAA0AAAAbAAUAAAARAAwAAAAcAAQAAAAJABIAAAAaAAIAAAALABAAAAAcAAAAAAAKABEAAAAbAAEAAAAJABEAAAAaAAEAAAAJABAAAAAaAAAAAAAKABAAAAAbAAAAAAAKABIAAAAbAAIAAAALABIAAAAcAAIAAAALABEAAAAcAAEAAAANAA8AAAAcAAgAAAANABAAAAAcAAkAAAAOABAAAAAdAAkAAAASABQAAAAcAAcAAAATABMAAAAdAAYAAAASABMAAAAcAAYAAAATABQAAAAdAAcAAAAIAA0AAAAaAAgAAAAJAA4AAAAbAAkAAAAJAA0AAAAbAAgAAAAIAA4AAAAaAAkAAAAAABQAAAAaAAUAAAACABIAAAAcAAMAAAAAABIAAAAaAAMAAAABABMAAAAbAAQAAAABABIAAAAbAAMAAAAAABMAAAAaAAQAAAACABMAAAAcAAQAAAABABQAAAAbAAUAAAAiAAQAAAAcAAMAAAAgAAYAAAAaAAUAAAAhAAUAAAAbAAQAAAAgAAUAAAAaAAQAAAAgAAQAAAAaAAMAAAAhAAQAAAAbAAMAAAAiAAUAAAAcAAQAAAAiAAYAAAAcAAUAAAAhAAYAAAAbAAUAAAALAAoAAAAaAAcAAAALAAkAAAAaAAYAAAAMAAoAAAAbAAcAAAACAAIAAAAaAAAAAAAEAAQAAAAcAAIAAAADAAMAAAAbAAEAAAACAAMAAAAaAAEAAAACAAQAAAAaAAIAAAADAAQAAAAbAAIAAAAEAAIAAAAcAAAAAAADAAIAAAAbAAAAAAAEAAMAAAAcAAEAAAAKAAIAAAAaAAUAAAAMAAAAAAAcAAMAAAAKAAAAAAAaAAMAAAAMAAIAAAAcAAUAAAALAAIAAAAbAAUAAAAKAAEAAAAaAAQAAAALAAAAAAAbAAMAAAAMAAEAAAAcAAQAAAA=")
tile_set = SubResource("TileSet_a2t13")

[node name="KeyChest" parent="." instance=ExtResource("4_8aiku")]
position = Vector2(871, 279)

[node name="FromR2" type="Marker2D" parent="."]
position = Vector2(29, 525)

[node name="FromR4" type="Marker2D" parent="."]
position = Vector2(724, 589)

[node name="FromR5" type="Marker2D" parent="."]
position = Vector2(726, 52)

[node name="ToRoom5" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom5"]
position = Vector2(720, -10)
shape = SubResource("RectangleShape2D_0jvk7")

[node name="ToRoom2" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom2"]
position = Vector2(-10, 528)
shape = SubResource("RectangleShape2D_c8iju")

[node name="ToRoom4" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom4"]
position = Vector2(720, 658)
shape = SubResource("RectangleShape2D_l5oc5")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(0, 0, 656, 0, 656, -27, 785, -28, 784, 0, 1152, 0, 1152, 648, 784, 648, 784, 675, 656, 675, 656, 648, 0, 648, 0, 591, -21, 591, -21, 465, 0, 465, 0, 0, -56, 673, 1205, 717, 1196, -64, 7, -32, 0, -1)

[connection signal="start_dialogue" from="KeyChest" to="KeyChest/Dialogue" method="start_dialogue"]
[connection signal="area_entered" from="ToRoom5" to="." method="_on_to_room_5_area_entered"]
[connection signal="area_entered" from="ToRoom2" to="." method="_on_to_room_2_area_entered"]
[connection signal="area_entered" from="ToRoom4" to="." method="_on_to_room_4_area_entered"]
